# otf

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  LICENSE.txt  README.md  mkdocs.yml  pyproject.toml
.cspell/: custom-python.txt  data-assimilation.txt
.github/workflows/: CI.yml
docs/: index.md
examples/: error_surfaces.py
examples/abc_flow/: async.ipynb  error_surfaces.ipynb  plot.py
examples/advection/: adjoint_reverse.ipynb  async.ipynb  async_adjoint.ipynb  plot.py  sync.ipynb
examples/harmonic_oscillator/: adjoint_reverse.ipynb  async.ipynb  async_adjoint.ipynb  error_surfaces.ipynb  sync.ipynb
examples/kse/: async.ipynb  plot.py
examples/lorenz63/: adjoint_reverse.ipynb  async.ipynb  async_adjoint.ipynb  async_gradient_model_error.ipynb  async_partial_observations.ipynb  error_surfaces.ipynb  error_surfaces.py  noisy_observations.ipynb  plot.py  sync.ipynb
examples/lorenz96/: adjoint_reverse.ipynb  async.ipynb  async_adjoint.ipynb  error_surfaces.ipynb  plot.py  sync.ipynb  utils.py
examples/van_der_pol_oscillator/: adjoint_reverse.ipynb  async.ipynb  async_adjoint.ipynb  async_partial_observations.ipynb  error_surfaces.ipynb  plot.py
examples/wave_1d/: adjoint_reverse.ipynb  async_adjoint.ipynb  async_adjoint_fourier.ipynb  plot.py  sync.ipynb  sync_fourier.ipynb
experiment/: newton.ipynb
src/otf/: __init__.py
src/otf/asyncd/: update_utils.py  utils.py
src/otf/optim/: __init__.py  _sensitivity.py  base.py  gradient.py  lr_scheduler.py  optimizer.py  parameter_update_option.py
src/otf/syncd/: utils.py
src/otf/system/: __init__.py  base.py  linear_nonlinear.py  utils.py
(+16 files in other folders)
