[project]
name = "otf"
version = "0.4.1"
license = "BSD-3-Clause"
license-files = ["LICENSE.txt"]
description = "A package implementing the on-the-fly (OTF) method of data assimilation"
readme = "README.md"
authors = [
    { name = "Nathan Schill", email = "nateschill@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "jax>=0.6.2",
    "numpy>=2.2.6",
    "optax>=0.2.5",
    "scipy>=1.15.3",
]

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "nb-clean>=4.0.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.13.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-api-autonav>=0.4.0",
    "mkdocs-material>=9.6.20",
    "mkdocstrings[python]>=0.30.1",
]
lint-format = [
    "ruff>=0.13.0",
]
profiling = [
    "tensorboard-plugin-profile>=2.20.6",
    "tensorflow>=2.20.0",
]
